overflow fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,7 @@
 
 html {
   background-color: #EEFBFA;
+  overflow-x: hidden;
 }
 
 select,
